PXP-9128 Flexible permissions: grant/revoke access to policies (#24)
